added html templates

--- a/plot_sounds_firstpart.html
+++ b/plot_sounds_firstpart.html
@@ -130,7 +130,7 @@
             
             function getpreviewurl(id) {
                 var http_request = new XMLHttpRequest();
-                url = '' + id;
+                url ='' + id;
                 return url;
             }
             
@@ -277,7 +277,7 @@
 	    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
             </head>
     <body>
-        <div class=title><i class="far fa-hand-pointer"></i><a>TITLE GOES HERE</a>
+        <div class=title><i class="far fa-hand-pointer"></i><a>Multiview speaker-invariant command representations</a>
 	<!--<span class="far fa-hand-pointer fa-2x" style="color:#FFFFFF;"></span>-->
             &nbsp;<audio id=spotifyplayer style="display: none; vertical-align: bottom" controls="controls"></audio>
             <span class=volcontrol id=volcontrol><input type=range min=0 max=1 step=.05 value=1 onchange="document.getElementById('spotifyplayer').volume=this.value">?</span>
