remove cache files

--- a/plot_sounds_firstpart.html
+++ b/plot_sounds_firstpart.html
@@ -193,7 +193,7 @@
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
             </head>
     <body>
-        <div class=title><i class="far fa-hand-pointer"></i><a>MY TITLE</a>
+        <div class=title><i class="far fa-hand-pointer"></i><a>TITLE GOES HERE</a>
     <!--<span class="far fa-hand-pointer fa-2x" style="color:#FFFFFF;"></span>-->
             &nbsp;<audio id=audioplayer style="display: none; vertical-align: bottom" controls="controls"></audio>
             <span class=volcontrol id=volcontrol><input type=range min=0 max=1 step=.05 value=1 onchange="document.getElementById('audioplayer').volume=this.value">?</span>
